Add grocery services, swagger api docs

--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,13 @@
 			<optional>true</optional>
 		</dependency>
 
+		<!-- Spring docs-->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.2.0</version>
+		</dependency>
+
 		<!-- Test -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
