--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>qp-assessment</artifactId>
+	<artifactId>grocery-online</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>qp-assessment</name>
+	<name>grocery-online</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
